# CyBroCamp

./: .gitignore  README.md  README.ru.md  pyproject.toml
docs/: phase0-implementation-plan.md
src/cybrocamp_memory/: __init__.py  chunks.py  cli.py  consolidation.py  cortex_automation.py  dream_eval.py  eval.py  eval_baseline.py  eval_suite.py  fact_cache.py  graph_index.py  hermes_adapter.py  hippo_core.py  living_swarm_memory.py  local_api.py  manifest.py  mempalace_bridge.py  operational_persistence.py  promotion_audit.py  promotion_execution.py  promotion_plan.py  promotion_preview.py  rebuild.py  retrieval.py  schema.py  search_index.py  service.py  sister_query.py  sister_rollout.py
tests/: test_chunk_cli.py  test_chunks.py  test_cli.py  test_consolidation.py  test_cortex_automation.py  test_dream_eval.py  test_eval.py  test_eval_baseline.py  test_eval_suite.py  test_fact_cache.py  test_graph_index.py  test_graph_index_cli.py  test_hermes_adapter.py  test_hippo_core.py  test_living_swarm_memory.py  test_local_api.py  test_mempalace_bridge.py  test_operational_persistence.py  test_promotion_audit.py  test_promotion_execution.py  test_promotion_plan.py  test_promotion_preview.py  test_rebuild.py  test_recall_cli.py  test_retrieval.py  test_schema.py  test_search_index.py  test_search_index_cli.py  test_service.py  test_sister_query.py  test_sister_rollout.py  test_source_manifest.py
tests/fixtures/stage13/: eval_cases.json  search_terms.jsonl
