[project]
name = "cybrocamp-memory"
version = "0.1.0"
description = "CyBroCamp hippocampal/cortical derived memory sidecar prototype"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
